MDL-42711 theme port from LM: fixed up choice results table overflowing to the right. (MDLSITE-2497)

--- a/theme/bootstrapbase/less/moodle/modules.less
+++ b/theme/bootstrapbase/less/moodle/modules.less
@@ -126,11 +126,16 @@ div#dock {
     display: none;
 }
 
-.path-mod-choice .horizontal  .choices {
-    margin: 0;
-    .option {
-        display: inline-block;
-        padding: 10px;
+.path-mod-choice {
+    .horizontal  .choices {
+        margin: 0;
+        .option {
+            display: inline-block;
+            padding: 10px;
+        }
+    }
+    .results .data {
+        white-space: normal;
     }
 }
 
